wip ipv6 ptr lookup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ authors = ["Adam Fitzgerald"]
 ipnet = "2.9.0"
 ipnetwork = "*"
 dns-lookup = "*"
-hickory-resolver = "*"
+local-ip-address = "*"
 
 [[bin]]
 name = "subnetcheck"
